--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,14 @@
 apply plugin: 'com.android.application'
 
+android.buildTypes.each { type ->
+    type.buildConfigField 'String', 'Base_URL', WEBServiceBaseURL
+    type.buildConfigField 'String', 'NowPlayingEn', WEBServiceMovieNowPlaying
+    type.buildConfigField 'String', 'UpComingEn', WEBServiceMovieUpComing
+    type.buildConfigField 'String', 'Image', WEBServiceBaseURLImage
+
+
+}
+
 android {
     compileSdkVersion 26
     defaultConfig {
@@ -9,6 +18,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -25,22 +35,17 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:support-v4:26.1.0'
 
-
-
     implementation 'com.android.support:recyclerview-v7:26.+'
-
     implementation 'com.google.code.gson:gson:2.6.2'
     implementation 'com.squareup.retrofit2:retrofit:2.0.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.android.support:cardview-v7:26.+'
-
     implementation 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
+    implementation 'com.ogaclejapan.smarttablayout:utils-v4:1.6.1@aar'
 
-    //Optional: see how to use the utility.
-    implementation'com.ogaclejapan.smarttablayout:utils-v4:1.6.1@aar'
-
+    implementation 'com.android.support:support-vector-drawable:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
