--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,12 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx1536m
+
+WEBServiceBaseURL="https://api.themoviedb.org/3/movie/"
+WEBServiceBaseURLImage="https://image.tmdb.org/t/p/w500"
+WEBServiceMovieNowPlaying="now_playing?api_key=0dde3e9896a8c299d142e214fcb636f8"
+WEBServiceMovieUpComing="upcoming?api_key=0dde3e9896a8c299d142e214fcb636f8"
+
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
